--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "afatmustafa/blade-hugeicons": "^0.0.3",
+        "bezhansalleh/filament-shield": "^3.2",
         "codeat3/blade-carbon-icons": "^2.28",
         "codeat3/blade-clarity-icons": "^1.9",
         "codeat3/blade-file-icons": "^1.9",
