modified:   app/Filament/Pages/Tenancy/EditTeamProfile.php 	modified:   app/Filament/Resources/AttendanceResource.php 	modified:   app/Filament/Resources/EmployeeResource.php 	modified:   app/Filament/Resources/ScheduleResource.php 	modified:   app/Filament/Resources/ScheduleResource/Pages/ListSchedules.php 	modified:   app/Filament/Resources/UserResource.php 	new file:   app/Livewire/PresentCheck.php 	modified:   app/Models/ManagementSDM/Employee.php 	modified:   app/Models/User.php 	modified:   composer.json 	modified:   composer.lock 	modified:   database/migrations/2024_08_16_070447_create_employees_table.php 	modified:   database/migrations/2024_08_16_070537_create_attendances_table.php 	new file:   resources/views/components/layouts/app.blade.php 	new file:   resources/views/livewire/present-check.blade.php 	modified:   routes/web.php

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "eduard9969/blade-polaris-icons": "^2.7",
         "eightynine/filament-advanced-widgets": "^3.0",
         "filament/filament": "^3.2",
+        "humaidem/filament-map-picker": "^0.1.5",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "mallardduck/blade-boxicons": "^2.4",
