--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "filament/filament": "^3.2",
         "humaidem/filament-map-picker": "^0.1.5",
         "laravel/framework": "^11.9",
+        "laravel/pulse": "^1.2",
         "laravel/tinker": "^2.9",
         "mallardduck/blade-boxicons": "^2.4",
         "mansoor/blade-lets-icons": "^1.0",
