new file:   app/Filament/Pages/Map.php 	modified:   app/Filament/Resources/DepartmentResource.php 	new file:   app/Http/Controllers/API/AttendanceController.php 	new file:   app/Http/Controllers/API/AuthController.php 	new file:   app/Livewire/Map.php 	modified:   app/Models/User.php 	deleted:    app/Notifications/VerifyEmail.php 	modified:   app/Providers/Filament/AdminPanelProvider.php 	modified:   bootstrap/app.php 	modified:   composer.json 	modified:   composer.lock 	new file:   config/sanctum.php 	new file:   database/migrations/2024_09_29_064810_create_personal_access_tokens_table.php 	new file:   resources/views/filament/pages/map.blade.php 	new file:   resources/views/livewire/map.blade.php 	new file:   routes/api.php

--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,14 @@
         "codeat3/blade-line-awesome-icons": "^1.4",
         "codeat3/blade-vaadin-icons": "^1.5",
         "davidhsianturi/blade-bootstrap-icons": "^1.5",
+        "dedoc/scramble": "^0.11.16",
         "eduard9969/blade-polaris-icons": "^2.7",
         "eightynine/filament-advanced-widgets": "^3.0",
         "filament/filament": "^3.2",
         "humaidem/filament-map-picker": "^0.1.5",
         "laravel/framework": "^11.9",
         "laravel/pulse": "^1.2",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "mallardduck/blade-boxicons": "^2.4",
         "mansoor/blade-lets-icons": "^1.0",
