--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "eduard9969/blade-polaris-icons": "^2.7",
         "eightynine/filament-advanced-widgets": "^3.0",
         "filament/filament": "^3.2",
+        "hasnayeen/themes": "^3.0",
         "humaidem/filament-map-picker": "^0.1.5",
         "laravel/framework": "^11.9",
         "laravel/pulse": "^1.2",
