modified:   app/Filament/Clusters/Procurement.php 	modified:   app/Filament/Clusters/Sales.php 	modified:   app/Filament/Exports/OrderItemExporter.php 	modified:   app/Filament/Exports/OrderProcessingExporter.php 	modified:   app/Filament/Exports/SupplierExporter.php 	modified:   app/Filament/Exports/SupplierTransactionsExporter.php 	modified:   app/Filament/Imports/OrderItemImporter.php 	modified:   app/Filament/Imports/OrderProcessingImporter.php 	modified:   app/Filament/Imports/SupplierImporter.php 	modified:   app/Filament/Imports/SupplierTransactionsImporter.php 	modified:   app/Filament/Resources/OrderItemResource.php 	modified:   app/Filament/Resources/OrderItemResource/Pages/ListOrderItems.php 	new file:   app/Filament/Resources/OrderItemResource/RelationManagers/OrderProcessingRelationManager.php 	new file:   app/Filament/Resources/OrderItemResource/Widgets/AdvancedStatsOverviewWidget.php 	modified:   app/Filament/Resources/OrderProcessingResource.php 	modified:   app/Filament/Resources/OrderProcessingResource/Pages/ListOrderProcessings.php 	modified:   app/Filament/Resources/OrderProcessingResource/RelationManagers/CustomerRelationManager.php 	modified:   app/Filament/Resources/OrderProcessingResource/RelationManagers/OrderItemsRelationManager.php 	new file:   app/Filament/Resources/OrderProcessingResource/RelationManagers/SalesRelationManager.php 	deleted:    app/Filament/Resources/OrderProcessingResource/RelationManagers/SalesTransactionRelationManager.php 	new file:   app/Filament/Resources/OrderProcessingResource/Widgets/AdvancedStatsOverviewWidget.php 	modified:   app/Filament/Resources/PurchaseItemResource.php 	modified:   app/Filament/Resources/PurchaseTransactionResource.php 	modified:   app/Filament/Resources/SaleItemResource.php 	modified:   app/Filament/Resources/SaleResource.php 	modified:   app/Filament/Resources/SupplierResource.php 	modified:   app/Filament/Resources/SupplierResource/Pages/ListSuppliers.php 	modified:   app/Filament/Resourc

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "codeat3/blade-carbon-icons": "^2.28",
         "codeat3/blade-clarity-icons": "^1.9",
         "codeat3/blade-file-icons": "^1.9",
+        "codeat3/blade-fluentui-system-icons": "^1.33",
         "codeat3/blade-google-material-design-icons": "^1.19",
         "codeat3/blade-iconpark": "^1.6",
         "codeat3/blade-line-awesome-icons": "^1.4",
