new file:   app/Filament/Exports/ScheduleExporter.php 	new file:   app/Filament/Exports/ShiftExporter.php 	new file:   app/Filament/Imports/ScheduleImporter.php 	new file:   app/Filament/Imports/ShiftImporter.php 	modified:   app/Filament/Resources/ScheduleResource.php 	modified:   app/Filament/Resources/ScheduleResource/Pages/ListSchedules.php 	new file:   app/Filament/Resources/ScheduleResource/Widgets/AdvancedStatsOverviewWidget.php 	modified:   app/Filament/Resources/ShiftResource.php 	modified:   app/Filament/Resources/ShiftResource/Pages/ListShifts.php 	modified:   app/Filament/Resources/ShiftResource/RelationManagers/ScheduleRelationManager.php 	new file:   app/Filament/Resources/ShiftResource/Widgets/AdvancedStatsOverviewWidget.php 	modified:   app/Models/ManagementSDM/Schedule.php 	modified:   app/Models/ManagementSDM/Shift.php 	modified:   composer.json 	modified:   composer.lock 	modified:   database/migrations/2024_08_16_070537_create_attendances_table.php

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "afatmustafa/blade-hugeicons": "^0.0.3",
         "bezhansalleh/filament-shield": "^3.2",
+        "codeat3/blade-akar-icons": "^2.0",
         "codeat3/blade-carbon-icons": "^2.28",
         "codeat3/blade-clarity-icons": "^1.9",
         "codeat3/blade-file-icons": "^1.9",
@@ -20,6 +21,7 @@
         "dedoc/scramble": "^0.11.16",
         "eduard9969/blade-polaris-icons": "^2.7",
         "eightynine/filament-advanced-widgets": "^3.0",
+        "faisal50x/blade-ionicons": "^1.0",
         "filament/filament": "^3.2",
         "hasnayeen/themes": "^3.0",
         "humaidem/filament-map-picker": "^0.1.5",
