modified:   app/Filament/Exports/AttendanceExporter.php 	modified:   app/Filament/Exports/CandidateExporter.php 	new file:   app/Filament/Exports/LeaveExporter.php 	modified:   app/Filament/Exports/PayrollExporter.php 	modified:   app/Filament/Imports/AttendanceImporter.php 	modified:   app/Filament/Imports/CandidateImporter.php 	new file:   app/Filament/Imports/LeaveImporter.php 	modified:   app/Filament/Imports/PayrollImporter.php 	deleted:    app/Filament/Pages/Attendance.php 	modified:   app/Filament/Pages/Map.php 	modified:   app/Filament/Resources/AttendanceResource.php 	modified:   app/Filament/Resources/AttendanceResource/Pages/ListAttendances.php 	modified:   app/Filament/Resources/AttendanceResource/RelationManagers/EmployeeRelationManager.php 	new file:   app/Filament/Resources/AttendanceResource/Widgets/AdvancedStatsOverviewWidget.php 	deleted:    app/Filament/Resources/AttendanceResource/Widgets/AttendanceChartWidget.php 	deleted:    app/Filament/Resources/AttendanceResource/Widgets/AttendanceLineChartWidget.php 	deleted:    app/Filament/Resources/AttendanceResource/Widgets/AttendanceStatsOverviewWidget.php 	modified:   app/Filament/Resources/CandidateInterviewResource.php 	modified:   app/Filament/Resources/CandidateResource.php 	modified:   app/Filament/Resources/CandidateResource/Pages/ListCandidates.php 	new file:   app/Filament/Resources/CandidateResource/Widgets/AdvancedStatsOverviewWidget.php 	deleted:    app/Filament/Resources/CandidateResource/Widgets/CandidateCountChartLineWidget.php 	modified:   app/Filament/Resources/EmployeeResource.php 	modified:   app/Filament/Resources/EmployeeResource/RelationManagers/AttendanceRelationManager.php 	modified:   app/Filament/Resources/EmployeeResource/RelationManagers/PayrollRelationManager.php 	modified:   app/Filament/Resources/LeaveResource.php 	modified:   app/Filament/Resources/LeaveResource/Pages/ListLeaves.php 	new file:   app/Filament/Resources/LeaveResource/Widgets/AdvancedStatsOverviewWidget.php

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "codeat3/blade-google-material-design-icons": "^1.19",
         "codeat3/blade-iconpark": "^1.6",
         "codeat3/blade-line-awesome-icons": "^1.4",
+        "codeat3/blade-pepicons": "^1.5",
         "codeat3/blade-vaadin-icons": "^1.5",
         "davidhsianturi/blade-bootstrap-icons": "^1.5",
         "dedoc/scramble": "^0.11.16",
