--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "mallardduck/blade-boxicons": "^2.4",
         "mansoor/blade-lets-icons": "^1.0",
         "postare/blade-mdi": "^1.0",
+        "rmsramos/activitylog": "^1.0",
         "ryangjchandler/blade-tabler-icons": "^2.3",
         "saade/blade-iconsax": "^1.2",
         "troccoli/blade-health-icons": "^3.0"
