modified:   app/Filament/Pages/Reports.php 	new file:   app/Filament/Pages/Wallet.php 	new file:   app/Filament/Pages/Webchat.php 	new file:   app/Filament/Pages/cctv.php 	modified:   app/Filament/Resources/UserResource.php 	new file:   app/Livewire/Report.php 	modified:   app/Models/Branch.php 	new file:   app/Models/Camera.php 	new file:   app/Models/ChatMessage.php 	new file:   app/Models/ChatMessageRead.php 	new file:   app/Models/ChatRoom.php 	new file:   app/Models/ChatRoomUser.php 	deleted:    app/Models/ChattingUser.php 	modified:   app/Models/Company.php 	deleted:    app/Models/Scopes/CompanyScope.php 	modified:   app/Models/User.php 	modified:   app/Providers/AppServiceProvider.php 	modified:   app/Providers/Filament/AdminPanelProvider.php 	modified:   bootstrap/app.php 	modified:   composer.json 	modified:   composer.lock 	new file:   config/broadcasting.php 	modified:   config/filament-activitylog.php 	new file:   config/reverb.php 	new file:   database/elevate-erp.sql 	deleted:    database/elevate.sql 	modified:   database/migrations/2024_08_16_070447_create_employees_table.php 	modified:   database/migrations/2024_08_16_070537_create_attendances_table.php 	modified:   database/migrations/2024_08_16_071126_create_payrolls_table.php 	modified:   database/migrations/2024_08_16_071154_create_candidates_table.php 	modified:   database/migrations/2024_08_16_071857_create_customers_table.php 	modified:   database/migrations/2024_08_16_072100_create_sales_table.php 	modified:   database/migrations/2024_08_16_072335_create_customer_supports_table.php 	modified:   database/migrations/2024_08_16_072745_create_projects_table.php 	modified:   database/migrations/2024_08_16_072900_create_project_milestones_table.php 	modified:   database/migrations/2024_08_16_073038_create_project_monitorings_table.php 	modified:   database/migrations/2024_08_16_073312_create_suppliers_table.php 	modified:   database/migrations/2024_08_16_074258_create_purchase_transactions_table.ph

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "afatmustafa/blade-hugeicons": "^0.0.3",
+        "barryvdh/laravel-dompdf": "^3.0",
         "bezhansalleh/filament-shield": "^3.3",
         "codeat3/blade-akar-icons": "^2.0",
         "codeat3/blade-carbon-icons": "^2.28",
@@ -28,9 +29,11 @@
         "humaidem/filament-map-picker": "^0.1.5",
         "laravel/framework": "^11.9",
         "laravel/pulse": "^1.2",
+        "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "mallardduck/blade-boxicons": "^2.4",
+        "mallardduck/blade-lucide-icons": "^1.23",
         "mansoor/blade-lets-icons": "^1.0",
         "postare/blade-mdi": "^1.0",
         "rmsramos/activitylog": "^1.0",
