--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "pusher-js": "^8.4.0-rc2",
         "tailwindcss": "^3.4.13",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "hls.js": "^1.5.17"
     }
 }
