--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Elevate-ERP
+APP_NAME=Qalcuity-ERP
 APP_ENV=local
 APP_KEY=base64:gETwTOuOTP9mp/ETZc02zY4tfVCrBbnbkudNOnropxs=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Jakarta
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://qalcuity.com
 
 APP_LOCALE=id
 APP_FALLBACK_LOCALE=id
@@ -22,9 +22,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=elevate-erp
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=qalcuity-erp
+DB_USERNAME=qalcuity_user
+DB_PASSWORD=secure_password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -47,12 +47,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=c378d94940d32f
-MAIL_PASSWORD=ed2d43157ae480
+MAIL_HOST=login.masuk.email
+MAIL_PORT=465
+MAIL_USERNAME=admin@qalcuity.com
+MAIL_PASSWORD=Wahyu123456789
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="erp@elevate.com"
+MAIL_FROM_ADDRESS="admin@qalcuity.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
