--- a/.env.example
+++ b/.env.example
@@ -51,7 +51,7 @@ MAIL_HOST=login.masuk.email
 MAIL_PORT=465
 MAIL_USERNAME=admin@qalcuity.com
 MAIL_PASSWORD=Wahyu123456789
-MAIL_ENCRYPTION=null
+MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS="admin@qalcuity.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
