--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "rmsramos/activitylog": "^1.0",
         "ryangjchandler/blade-tabler-icons": "^2.3",
         "saade/blade-iconsax": "^1.2",
+        "spatie/laravel-permission": "^6.10",
         "troccoli/blade-health-icons": "^3.0"
     },
     "require-dev": {
