modified:   .env.example 	modified:   app/Filament/Resources/AccountingResource.php 	modified:   app/Models/Company.php 	modified:   app/Policies/ManagementFinancial/AccountingPolicy.php 	modified:   app/Providers/AppServiceProvider.php 	modified:   app/Providers/Filament/AdminPanelProvider.php 	modified:   app/Providers/Filament/DevPanelProvider.php 	modified:   database/migrations/2024_11_14_122957_create_activity_log_table.php 	modified:   resources/views/layout.blade.php 	modified:   resources/views/welcome.blade.php

--- a/.env.example
+++ b/.env.example
@@ -23,8 +23,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=qalcuity-erp
-DB_USERNAME=qalcuity_user
-DB_PASSWORD=secure_password
+DB_USERNAME=root
+DB_PASSWORD=new_password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
